Use fixed and accessible spacing variables
Some spacing doesn’t need to increase when the user has indicated an
accessibility need through a larger root font-size; some spacing does.

This commit adds a handful of CSS variables attuned to each need: those
prefixed with `fixed-spacing` don’t change as the user’s font size
changes, and are most useful when UI does not need additional room as
text size increases. Those prefixed with `accessible-spacing` do grow
larger with text size, such as when we need elements to be farther apart
to be visually distinguishable.

This commit also removes the `font-size` property from being applied to
the `body` element, because we want the user’s preferences to rule.

Issue #12

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   display: grid;
   grid-template-rows: min-content 1fr;
-  gap: var(--spacing--gap);
-  padding: var(--spacing--gap);
+  gap: var(--fixed-spacing--1x);
+  padding: var(--fixed-spacing--1x);
 
   position: absolute;
   inset: 0;
@@ -13,7 +13,7 @@
   justify-content: space-between;
   align-items: center;
 
-  padding: var(--spacing--gap);
+  padding: var(--fixed-spacing--1x);
 }
 
 .App-logo {
@@ -27,20 +27,20 @@
 .App-navbar ul {
   display: flex;
   align-items: center;
-  gap: calc(var(--spacing--gap) * 2);
+  gap: calc(var(--fixed-spacing--1x) * 2);
 }
 
 .App-navbar__item {
   display: flex;
   align-items: flex-start;
-  gap: calc(var(--spacing--gap) / 2);
+  gap: calc(var(--fixed-spacing--1x) / 2);
 
   font-size: 0.875rem;
   color: black;
   text-transform: uppercase;
   font-weight: var(--font-weight--bold);
   text-decoration: none;
-  padding: var(--spacing--gap);
+  padding: var(--fixed-spacing--1x);
   border-radius: 5px;
   cursor: pointer;
 }
